[gd_scene load_steps=6 format=3 uid="uid://ctn6uvausqd03"]

[ext_resource type="Script" uid="uid://byftg2lu5cc2c" path="res://resources/scripts/ui/settings.gd" id="1_1qpvc"]
[ext_resource type="Theme" uid="uid://cdit4linr2ygw" path="res://resources/Scenes/ui/main_menu_theme.tres" id="1_46q7o"]
[ext_resource type="Shader" uid="uid://cqutm1cdjtr77" path="res://resources/materials/main_menu_material.gdshader" id="3_evjtl"]
[ext_resource type="Texture2D" uid="uid://qdtsuyytors1" path="res://resources/textures/noise.png" id="4_ou4nq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jmxuv"]
shader = ExtResource("3_evjtl")
shader_parameter/noise = ExtResource("4_ou4nq")
shader_parameter/skiddies_offset = Vector2(0, 0)
shader_parameter/polar_center = Vector2(0.405, 0.52)
shader_parameter/polar_scale = 2.615
shader_parameter/polar_noise_offset = -0.15
shader_parameter/background_color = Color(1, 1, 1, 1)
shader_parameter/skid_color = Color(0.25, 0.167, 0, 1)

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_46q7o")
script = ExtResource("1_1qpvc")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jmxuv")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.5
offset_right = 160.0
offset_bottom = 90.5
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
current_tab = 0
use_hidden_tabs_for_min_size = true

[node name="graphics" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
metadata/_tab_index = 0

[node name="window_mode" type="HBoxContainer" parent="VBoxContainer/TabContainer/graphics"]
layout_mode = 2

[node name="label_window_mode" type="Label" parent="VBoxContainer/TabContainer/graphics/window_mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "window mode"

[node name="menubutton_window_mode" type="MenuButton" parent="VBoxContainer/TabContainer/graphics/window_mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "mode
"
alignment = 2

[node name="shadows" type="HBoxContainer" parent="VBoxContainer/TabContainer/graphics"]
layout_mode = 2
alignment = 1

[node name="label_shadows" type="Label" parent="VBoxContainer/TabContainer/graphics/shadows"]
layout_mode = 2
size_flags_horizontal = 3
text = "shadows"

[node name="menubutton_shadow_quality" type="MenuButton" parent="VBoxContainer/TabContainer/graphics/shadows"]
layout_mode = 2
size_flags_horizontal = 3
text = "quality
"
alignment = 2

[node name="antialiasing" type="HBoxContainer" parent="VBoxContainer/TabContainer/graphics"]
layout_mode = 2
alignment = 1

[node name="label_aa" type="Label" parent="VBoxContainer/TabContainer/graphics/antialiasing"]
layout_mode = 2
size_flags_horizontal = 3
text = "antialiasing"

[node name="menubutton_aa" type="MenuButton" parent="VBoxContainer/TabContainer/graphics/antialiasing"]
layout_mode = 2
size_flags_horizontal = 3
text = "method
"
alignment = 2

[node name="upscaler" type="HBoxContainer" parent="VBoxContainer/TabContainer/graphics"]
layout_mode = 2
alignment = 1

[node name="label_upscaler" type="Label" parent="VBoxContainer/TabContainer/graphics/upscaler"]
layout_mode = 2
size_flags_horizontal = 3
text = "upscaling"

[node name="menubutton_resolution_scaler" type="MenuButton" parent="VBoxContainer/TabContainer/graphics/upscaler"]
layout_mode = 2
size_flags_horizontal = 3
text = "method"
alignment = 2

[node name="upscaling" type="HBoxContainer" parent="VBoxContainer/TabContainer/graphics"]
layout_mode = 2
alignment = 1

[node name="label_upscaler" type="Label" parent="VBoxContainer/TabContainer/graphics/upscaling"]
layout_mode = 2
size_flags_horizontal = 3
text = "resolution scale"

[node name="menubutton_resolution_scaling" type="MenuButton" parent="VBoxContainer/TabContainer/graphics/upscaling"]
layout_mode = 2
size_flags_horizontal = 3
text = "amount"
alignment = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="button_exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "main menu"
alignment = 0
